tests/basic/bad/test51.pepa
% File: tests/bad/test51.pepa
% Syntax error, missing full stop in prefix
P = (a, r)P;
(P <> P)
